--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
       const password = document.getElementById("password").value.trim();
 
       const correctEmail = "mohammad.youness@ciu.edu.ge";
-      const correctPassword = "CIU.545978";
+      const correctPassword = "CIU.545978@";
 
       if (email === correctEmail && password === correctPassword) {
         localStorage.setItem("loggedInUser", email);
